@@ -19,9 +19,9 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc c-ctype extensions getline getopt gettext localcharset
-    mbrlen mbrtowc mbsinit memchr mkostemp obstack pathmax regex rename
-    selinux-h stdbool stat-macros ssize_t strerror strverscmp unlocked-io
-    verify wcrtomb wctob"
+    mbrlen mbrtowc mbsinit memchr mkostemp obstack pathmax regex
+    rename selinux-h stdbool stat-macros ssize_t strerror strverscmp
+    unlocked-io verify version-etc-fsf wcrtomb wctob"
 
 checkout_only_file=
 MSGID_BUGS_ADDRESS=bug-gnu-utils@gnu.org
